# piesparrow

./: LICENSE  README.md  pyproject.toml
development_stuff/: db_cividis_dark.html  db_cividis_light.html  db_gold_dark.html  db_gold_light.html  db_rainbow_dark.html  db_rainbow_light.html  db_sparrow_dark.html  db_sparrow_light.html  db_sunflower_dark.html  db_sunflowerlight.html  db_virdis_dark.html  db_virdis_light.html  mock-dashboard-dark.html  mock-dashboard.html  mock-dashboard.py  piesparrow.code-workspace  population.csv  ps-combine-test.html  ps-line-test.html  pschart-test.py  psp-bar-test.py  psp-cbine-test.py  pspbar.py  pspspline.py  pysparrow-dev.code-workspace  sparrow.css  test3.py
development_stuff/billboardjs/: base_light.css  bb-bar.html  gold_l.css  layout-test.html  rainbow_l.css
examples/01-helloWorld/: helloWorld.html  helloWorld.py
examples/02-barCharts/: barChart.html  barChart.py
examples/03-pieCharts/: lineChart.py  pieChart.html
examples/04-lineCharts/: lineChart.html  lineChart.py  pop_province.csv
examples/05-dashboard/: dashboard.html  dashboard.py  leads_data.csv
examples/mock-dashboard/: mock-dashboard.html  mock-dashboard.py  mock-data.csv
piesparrow/: __init__.py  bb-sandbox.ipynb  bb-test.py  chartjs_bar.html  daniyal.html  layout-test-2.html  layout-test.html  mock-dashboard-dark.html  mock-dashboard-light.html  mock-dashboard.py  mock_data.csv  multi-chart.html  piesparrow-pkg.py  piesparrow.py  ps-bar-test.html  psp006.py  psparea.py  pspbar.py  pspchart.py  pspdonut.py  pspgauge.py  pspkpi.py  pspline.py  psppie.py  pspspline.py  psptable.py  psptypo.py  sparrow.css  test.py  test2.py
piesparrow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+18 files in other folders)
