[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piesparrow"
version = "0.0.2"
authors = [
  { name="Daniyal M", email="hello@itsdaniyalm.com" },
]
description = "pieSparrow is a stupidly simple python package to create interactive HTML frontends and dashboards from Python environment. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['python', 'html', 'frontend', 'dashboard', 'data analysis', 'visualization', 'website', 'charts', 'javascript']
[project.urls]
"Homepage" = "https://piesparrow.itsdaniyalm.com"
"Bug Tracker" = "https://github.com/itsdaniyalm/piesparrow/issues"